resources/curity/tokenhandler-final/nginx-gateway-routes.yaml
###################################################################
# Adjust routes depending on how you use the Curity Identity Server
###################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tokenhandler-admin-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - admin.demoapp.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: tokenhandler-admin-svc
      kind: Service
      port: 6749
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tokenhandler-oauthagent-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - api.demoapp.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: tokenhandler-runtime-svc
      kind: Service
      port: 8443
