resources/curity/tokenhandler-final/gateway-routes.yaml
###########################################
# Routes to expose the Curity Token Handler
###########################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tokenhandler-admin-route
spec:
  parentRefs:
  - name: kong-gateway
    namespace: apigateway
  hostnames:
  - admin.demoapp.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: tokenhandler-admin-svc
      kind: Service
      port: 6749
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tokenhandler-runtime-route
spec:
  parentRefs:
  - name: kong-gateway
    namespace: apigateway
  hostnames:
  - api.demoapp.example
  rules:
  - matches:
    - path:
        value: /oauthagent/example
    backendRefs:
    - name: tokenhandler-runtime-svc
      kind: Service
      port: 8443
---
###################################
# Allows the Admin UI to be exposed
###################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adminui-allow
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: apigateway
      podSelector:
        matchLabels:
          app: kong-kong
    ports:
    - port: 6749
      protocol: TCP
  podSelector:
    matchLabels:
      role: tokenhandler-admin
  policyTypes:
  - Ingress
